# SpaceInvaders

./: .gitignore  SpaceInvaders.cabal  stack.yaml
src/: Object.hs  ObjectBehavior.hs  Parser.hs  PhysicalDimensions.hs  RenderLandscape.hs  RenderObject.hs
