cabal-version:      2.4
name:               SpaceInvaders
version:            0.4.5
license-file:       LICENSE
author:             Henrik Nilsson, Antony Courtney
maintainer:         Ivan Perez <ivan.perez@keera.co.uk>
homepage:           http://www.haskell.org/yampa/
category:           Game
synopsis:           Video game
description:
  Video game implemented in Yampa.
  .
  <<https://github.com/ivanperez-keera/SpaceInvaders/blob/develop/screenshots/gameplay.gif?raw=true>>

build-type:         Simple
extra-source-files: CHANGELOG

executable spaceInvaders
  hs-source-dirs: src
  ghc-options:    -threaded -O2 -Wall -fno-warn-name-shadowing
  build-depends:
    , array   ^>=0.5.4
    , base    ^>=4.12
    , deepseq ^>=1.4.4
    , HGL     ^>=3.2.3
    , random  ^>=1.1
    , Yampa   ^>=0.12

  main-is:        Main.hs
  extensions:     Arrows
  other-modules:
    Animate
    ColorBindings
    Colors
    Command
    Diagnostics
    IdentityList
    Object
    ObjectBehavior
    Parser
    PhysicalDimensions
    RenderLandscape
    RenderObject
    WorldGeometry

source-repository head
  type:     git
  location: git://github.com/ivanperez-keera/SpaceInvaders.git
